tdf#160801 fix crash by delaying resetting of attributes

Calling SwWrtShell::ResetAttr() will sometimes delete the
current SwTextShell instance so call it after clearing the
direct formatting flag.

Change-Id: I43a66527cee30271447dff30f166086c6759e162
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168304
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 6f4adc1274cfac30b9097411bb193bd4386969f0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168629
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>